# async-signals

./: .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml  tox-pytest.yml
async_signals/: __init__.py  dispatcher.py  license.txt  utils.py
tests/: test_dispatcher.py  test_utils.py
