[project]
name = "async-signals"
version = "0.3.0"
description = "Async version of the Django signals class - for usage in for example FastAPI."
authors = [{ name = "TEAM23 GmbH", email = "info@team23.de" }]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/team23/async-signals"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov>=7.0.0,<8",
    "pytest-mock>=3.15.1,<4",
    "anyio[trio]>=4.11.0,<5.0.0",
    "tox>=4.30.3,<5.0",
    "ruff>=0.13.3,<0.14.0",
    "pyright>=1.1.406,<1.2"
]

[tool.ruff]
line-length = 115
target-version = "py310"
output-format = "grouped"

[tool.ruff.lint]
select = ["F","E","W","C","I","N","UP","ANN","S","B","A","COM","C4","T20","PT","ARG","TD","RUF"]
ignore = ["A001","A002","A003","ANN401","C901","N8","B008","F405","F821"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"conftest.py" = ["S101","ANN","F401"]
"test_*.py" = ["S101","ANN","F401","ARG001"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "async_signals"
module-root = ""
